# directx

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: CI.yml  rust.yml  rustdocs.yml
app/: Cargo.toml
app/src/: main.rs  trace.rs
d2d/: Cargo.toml  LICENSE  README.md
d2d/example/: Cargo.toml  hdpi.manifest
d2d/example/src/: main.rs
d2d/examples/: Cargo.toml  build.rs
d2d/src/: brushes.rs  color.rs  context.rs  factory.rs  lib.rs  target.rs
d2d/src/gfx/: color.rs  context.rs  mod.rs  target.rs
d2d/src/resources/: brushes.rs  mod.rs
directx/: Cargo.toml
directx/src/: main.rs
game/: Cargo.toml  build.rs
game/src/: game.rs  main.rs  resources.rs
geom/: Cargo.toml
geom/src/: lib.rs
geom/src/d2/: mod.rs
src/: lib.rs  main.rs
src/win32/: errors.rs  invoke.rs  mod.rs  window.rs
src/win32/debug/: mod.rs  msgs.rs
win-geom/: Cargo.toml
win-geom/src/: lib.rs
win-geom/src/d2/: mod.rs
win32/: Cargo.toml
win32/src/: errors.rs  geom.rs  invoke.rs  lib.rs  proc.rs  types.rs  window.rs
win32/src/debug/: mod.rs  msgs.rs
win32/src/input/: mod.rs
win32/src/input/keyboard/: adapter.rs  codes.rs  kbd.rs  mod.rs
win32/src/types/: mod.rs  resources.rs
win32/src/window/: class.rs  dpi.rs  inner.rs  key.rs  keyboard.rs  mod.rs  wnd.rs
