[package]
name = "directx"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
thiserror = "1.0.37"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
