[package]
name = "directx"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
thiserror = "1.0.37"
lazy_static = "1.4.0"
num-traits = "0.2.15"
maplit = "1.0.2"
parking_lot = "0.12.1"
paste = "1.0.9"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync"] }

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
