[package]
name = "d2d"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
win-geom = { path = "../win-geom", features = ["d2d"] }

paste = "1.0.9"
tracing = "0.1.37"
win32 = { path = "../win32" }

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Foundation_Numerics"
]

[dev-dependencies]
pretty_assertions = "1.3.0"
