[package]
name = "directx"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
win32 = { path = "../win32" }

thiserror = "1.0.37"
maplit = "1.0.2"
parking_lot = "0.12.1"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
