[package]
name = "game"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]
build = "build.rs"

[features]
# Enables a stdio output (useful for debugging with traces from a terminal).
# Acheives this by _not_ setting the windows subsystem to windows, which will
# cause a cmd window to appear if the app is opened double-clicking and it was
# built with this feature enabled.
stdio= []

[dependencies]
geom = { path = "../geom" }
win32 = { path = "../win32" }

thiserror = "1.0.37"
maplit = "1.0.2"
paste = "1.0.9"
parking_lot = "0.12.1"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
