[package]
name = "win32"
version = "0.1.0"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
win-geom = { path = "../win-geom", features = ["win32"] }

bitvec = "1.0.1"
deku = "0.15"
thiserror = "1.0.37"
lazy_static = "1.4.0"
maplit = "1.0.2"
num-traits = "0.2.15"
parking_lot = "0.12.1"
paste = "1.0.9"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.21.2", features = ["sync"] }
tracing = "0.1.37"
widestring = "1.0.2"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
]

[dev-dependencies]
pretty_assertions = "1.3.0"
